fix: width issue on mobile

--- a/src/pages/Dashboard/Cards/Card.module.scss
+++ b/src/pages/Dashboard/Cards/Card.module.scss
@@ -12,3 +12,9 @@
     padding: 1rem;
     color: $alternativeText;
 }
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: 100%;
+    }
+}
