--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -69,10 +69,6 @@
         @media screen and (max-width: 768px) {
             flex-direction: column;
             gap: 1rem;
-
-            .card {
-                width: 100%;
-            }
         }
     }
 }
